Made changes to the biography html.

--- a/Biography.html
+++ b/Biography.html
@@ -11,8 +11,13 @@
         <a href=".\Portfolio.html">Portfolio</a>
         <a class="active" href=".\Biography.html">Biography</a>
     </div>
+    <img src="Me.jpg" alt="Picture of Jacob Hall">
+    <h1 sytle="font-size: 45px">Biography</h1>
+    <h2 style="font-size: 25px">Education</h2>
     <p>
-        Welcome to my biography!!!
+        Jacob Hall is a computer enthusiast who aspires to become a computer programmer.<br>
+        Jacob received a bachelor's degree in Computer Science from Clayon State University<br>
+        in 2022 and graduated with honors and a GPA of 3.6.
     </p>
 </body>
 </html>
