Added contact.html page.

--- a/Biography.html
+++ b/Biography.html
@@ -6,18 +6,26 @@
     <title>Biography</title>
 </head>
 <body>
-    <div class="topnav">
-        <a href=".\Home.html">Home</a>
-        <a href=".\Portfolio.html">Portfolio</a>
-        <a class="active" href=".\Biography.html">Biography</a>
-    </div>
-    <img src="Me.jpg" alt="Picture of Jacob Hall">
-    <h1 sytle="font-size: 45px">Biography</h1>
-    <h2 style="font-size: 25px">Education</h2>
+  <nav class="topnav">
+      <a href=".\Home.html">Home</a>
+      <a href=".\Portfolio.html">Portfolio</a>
+      <a class="active" href=".\Biography.html">Biography</a>
+      <a href=".\contact.html">Contact</a>
+  </nav>
+  <header>
+      <img src="Me.jpg" alt="Picture of Jacob Hall">
+      <h1 sytle="font-size: 45px">Biography</h1></header>
+  <section>
+      <h2 style="font-size: 25px">Education</h2>
     <p>
         Jacob Hall is a computer enthusiast who aspires to become a computer programmer.<br>
         Jacob received a bachelor's degree in Computer Science from Clayon State University<br>
         in 2022 and graduated with honors and a GPA of 3.6.
     </p>
+  </section>
+  <footer>
+      <p>Author: Jacob Hall</p>
+      <p>Contact: <a href="mailto:halljacobdaniel@gmail.com">halljacobdaniel@gmail.com</a></p>
+  </footer>
 </body>
 </html>
