--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
         <a class="active" href=".\Home.html">Home</a>
         <a href=".\Portfolio.html">Portfolio</a>
         <a href=".\Biography.html">Biography</a>
+        <a href=".\contact.html">Contact</a>
     </div>
     <p>
         Welcome to my homepage!!!
