--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,6 +10,7 @@
     <a href=".\Home.html">Home</a>
     <a class="active" href=".\Portfolio.html">Portfolio</a>
     <a href=".\Biography.html">Biography</a>
+    <a href=".\contact.html">Contact</a>
   </div>
   <p>
     Welcome to my portfolio!!!
