Tried out some test on a creating a separate file to act as the navigation menu. I was unsuccessful.

--- a/Home.html
+++ b/Home.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href=".\Styles.css">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href=".\Styles.css" />
+    <meta charset="UTF-8" />
     <title>Home</title>
 </head>
 <body>
-    <div class="topnav">
+    <nav class="topnav">
         <a class="active" href=".\Home.html">Home</a>
         <a href=".\Portfolio.html">Portfolio</a>
         <a href=".\Biography.html">Biography</a>
         <a href=".\contact.html">Contact</a>
-    </div>
-    <p>
-        Welcome to my homepage!!!
-    </p>
+    </nav>
+    <header>
+        <h1>Home</h1>
+    </header>
+    <section>
+        <p>
+            Welcome to my homepage!!!
+        </p>
+    </section>
 </body>
 </html>
