--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,12 +6,12 @@
   <title>Portfolio</title>
 </head>
 <body>
-  <div class="topnav">
+  <nav class="topnav">
     <a href=".\Home.html">Home</a>
     <a class="active" href=".\Portfolio.html">Portfolio</a>
     <a href=".\Biography.html">Biography</a>
     <a href=".\contact.html">Contact</a>
-  </div>
+  </nav>
   <p>
     Welcome to my portfolio!!!
   </p>
